# python-virtmanclient

./: .gitignore  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg
test/: .client-test.py.swp  client-test.py
vmthunderclient/: client.py
vmthunderclient/openstack/common/: __init__.py  gettextutils.py  importutils.py  jsonutils.py
