[metadata]
name = python-vmthunderclient
version = 2014.4
summary = The python client to access the VMThunder service
description-file =
    README.rst
author = VMThunder
author-email = lzynudt@gmail.com
home-page = https://github.com/lihuiba/python-vmthunderclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    vmthunderclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

#[entry_points]
#vmthunder.executor =
#console_scripts =
#    vmthunder-api = vmthunder.cmd.api:main

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmthunderclient/locale
domain = python-vmthunderclient

[update_catalog]
domain = python-vmthunderclient
output_dir = vmthunderclient/locale
input_file = vmthunderclient/locale/python-vmthunderclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmthunderclient/locale/python-vmthunderclient.pot
